--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 spring.flyway.baseline-on-migrate = true
 
-jwtSecret = testShopSecretKey
-jwtExpirationMs = 3600000
+jwt.token.secret = testShopSecretKey
+jwt.token.expired = 3600000
